# ChangeLog for sys-apps/shadow
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/shadow/ChangeLog,v 1.45 2003/12/15 04:32:08 azarah Exp $

  15 Dec 2003; Martin Schlemmer <azarah@gentoo.org> shadow-4.0.3-r9.ebuild:
  Install the correct version of /etc/pam.d/system-auth, and do not install
  system-auth-1.1. Do not force update anymore.

  10 Dec 2003; Seemant Kulleen <seemant@gentoo.org> shadow-4.0.3-r9.ebuild:
  don't install man 5 passwd either, man-pages again

  10 Dec 2003; Seemant Kulleen <seemant@gentoo.org> shadow-4.0.3-r9.ebuild:
  don't install the getspnam manpage -- man-pages package handles that and does
  it with a better version, to boot

  09 Dec 2003; Seemant Kulleen <seemant@gentoo.org> shadow-4.0.3-r9.ebuild:
  don't install the id man page, coreutils does that

*shadow-4.0.3-r9 (06 Dec 2003)

  06 Dec 2003; Seemant Kulleen <seemant@gentoo.org> shadow-4.0.3-r9.ebuild:
  version bump to force /bin/groups to be on the system -- /bin/groups has been
  removed from coreutils, and now only shadow will provide it. Note that
  coreutils used to compile su and not install it.  This behaviour was
  changed in the bumped coreutils as well (not that that has any effect on
  this, but thought I'd mention it anyway)

*shadow-4.0.3-r8 (17 Nov 2003)

  17 Nov 2003; Joshua Brindle <method@gentoo.org> shadow-4.0.3-r8.ebuild:
  added optional pam support

  28 Oct 2003; Chris PeBenito <pebenito@gentoo.org> shadow-4.0.3-r7.ebuild,
  files/shadow-4.0.3-selinux.diff:
  Add new API SELinux patch

  26 Sep 2003; Martin Schlemmer <azarah@gentoo.org> shadow-4.0.3-r7.ebuild:
  Mark stable.

  26 Sep 2003; Martin Holzer <mholzer@gentoo.org> shadow-4.0.3-r3.ebuild,
  shadow-4.0.3-r4.ebuild, shadow-4.0.3-r5.ebuild, shadow-4.0.3-r6.ebuild,
  shadow-4.0.3-r7.ebuild:
  Added nls? sys-devel/gettext. Closes #29236.

*shadow-4.0.3-r7 (04 Aug 2003)
