@@ -1,6 +1,12 @@
 # ChangeLog for sys-apps/shadow
-# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/shadow/ChangeLog,v 1.45 2003/12/15 04:32:08 azarah Exp $
+# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/shadow/ChangeLog,v 1.46 2004/01/10 01:31:05 agriffis Exp $
+
+*shadow-4.0.3-r10 (09 Jan 2004)
+
+  09 Jan 2004; Aron Griffis <agriffis@gentoo.org> shadow-4.0.3-r10.ebuild:
+  Use -fPIC since libshadow.a is consumed by shared objects in freeradius.
+  Closes bug #37719
 
   15 Dec 2003; Martin Schlemmer <azarah@gentoo.org> shadow-4.0.3-r9.ebuild:
   Install the correct version of /etc/pam.d/system-auth, and do not install
